--- a/styles.css
+++ b/styles.css
@@ -9,4 +9,6 @@
 .comment-hidden{
     color: gray !important;
     font-size: 12px !important;
+    padding-left: 10px;
+    border-left: 1px solid rgba(255,0,0,0.5);
 }
