--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,19 @@
 ._banned {
   opacity: 0.5;
 }
+
+._ban_infoblock {
+  font-size: 8px;
+}
+
+._ban_infoblock div {
+  margin-left: 5px;
+  margin-right: 5px;
+  display: inline;
+  position: relative;
+}
+
+._ban_infoblock .wrap sub {
+  top: -4px;
+  position: relative;
+}
